--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    // "target": "ES2020",
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -8,7 +9,9 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    // "module": "ESNext",
     "moduleResolution": "bundler",
+    // "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
